--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-django
-gunicorn
-whitenoise
-psycopg2-binary
-requests
-urllib3
-django-environ
+asgiref==3.7.2
+backcall==0.2.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+Django==4.2.4
+django-cors-headers==4.3.1
+django-environ==0.11.2
+executing==1.0.0
+gunicorn==21.2.0
+idna==3.4
+packaging==23.2
+pickleshare==0.7.5
+psycopg2-binary==2.9.9
+pure-eval==0.2.2
+Pygments==2.13.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pywin32==304
+pyzmq==23.2.1
+requests==2.31.0
+six==1.16.0
+sqlparse==0.4.4
+tornado==6.2
+traitlets==5.3.0
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.1.0
+wcwidth==0.2.5
+whitenoise==6.6.0
